--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-zbody {
-    background-image: url('https://www.transparenttextures.com/patterns/brick-wall.png');
-    background-repeat: repeat;
+body {
+  background-color: rgb(28, 180, 235);
     font-family: Arial, sans-serif;
   }
   
   h1 {
-    background-color: rgb(102, 226, 72);
+    background-color: yellow;
     color: red;
     text-align: center;
     padding: 10px;
@@ -15,7 +14,7 @@ zbody {
   p {
     color: gray;
     margin: 10px;
-    background-color: rgb(93, 223, 54);
+    background-color: yellow;
     border: 1px solid black;
     padding: 10px;
     text-align: center;
